# playtime

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  conftest.py  playtime.py  pyproject.toml  test_playtime.py
.github/workflows/: pypi.yml  tox.yml
migrations/: 0001_initial.py  0002_cgngdata_lang.py  0003_alter_cgngdata_title_alter_directory_title.py
